--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Teste Luiz Gabriel ADA</title>
 </head>
 <body>
-    DevOps ADA
+    Este repositório é um guia prático para aprender a usar o controle de versão com Git e GitHub. Aqui você encontrará informações e tutoriais que o ajudarão a entender e dominar os conceitos básicos e avançados do versionamento de código.
 </body>
 </html>
